--- a/main.html
+++ b/main.html
@@ -123,14 +123,14 @@ a.avatar img {
 </head>
 <body>
 <h1></h1>
-<div><p>> <span>[root@VM-0-9-centos ~]# </span>: "<i> rm -rf /关于小夏的记忆/   </i>"</p>
-<p>> <span>[root@VM-0-9-centos ~]#</span>: "<i>删除成功</i>"</p>
-<p>> <span>[root@VM-0-9-centos ~]#</span>: <b>文件备份自动启用中...</span>
+<div><p>> <span>[Rainbow@ubuntu ~]# </span>: "<i> rm -rf /关于小夏的记忆/   </i>"</p>
+<p>> <span>[Rainbow@ubuntu ~]#</span>: "<i>删除成功</i>"</p>
+<p>> <span>[Rainbow@ubuntu ~]#</span>: <b>文件备份自动启用中...</span>
     : <a href="/">备份失败</a>, <a href="/">仅</a><a href="/">备份文件</a><a href="/">碎片</a></p>
 <p>> 
-        <span>[root@VM-0-9-centos ~]#: </span>"<i>文件碎片正在加载...</i>"</p>
+        <span>[Rainbow@ubuntu ~]#: </span>"<i>文件碎片正在加载...</i>"</p>
 <p>> 
-            <span>[root@VM-0-9-centos ~]#: </span>"<i>加载成功 正在打开...</i>"</p>
+            <span>[Rainbow@ubuntu ~]#: </span>"<i>加载成功 正在打开...</i>"</p>
 </div>
 
 
