--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-<head><meta http-equiv="refresh" >
+<head>
+    <link rel="shortcut icon" href="USM.ico" /> 
+    <meta http-equiv="refresh" >
 <meta charset="utf-8">
 <title>Special For You</title>
 
