--- a/main.html
+++ b/main.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="shortcut icon" href="USM.ico" /> 
+    <link rel="shortcut icon" href="USM.ico" />
+    <link rel="icon" href="USM.ico"/>
     <meta http-equiv="refresh" >
 <meta charset="utf-8">
 <title>Special For You</title>
