--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="shortcut icon" href="USM.ico" />
     <link rel="icon" href="USM.ico"/>
-    <meta http-equiv="refresh" content="17;url=./xia.html">
+    <meta http-equiv="refresh" content="17;url=../xia.html"/>
 <meta charset="utf-8">
 <title>Special For You</title>
 
