--- a/xia.html
+++ b/xia.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>文件碎片</title>
-		<link href="./xia.css" type="text/css" rel="stylesheet" />
+		<link href="xia.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body
 		ondragstart="window.event.returnValue=false"
@@ -37,7 +37,7 @@
 			<!-- <source src="http://cms.hovertree.com/hovertreesound/hovertreexihuanni.mp3" type="audio/mpeg"> -->
 			<br />
 		</audio>
-		<script type="text/javascript" src="./xia.js"></script>
+		<script type="text/javascript" src="xia.js"></script>
 		<script type="text/javascript">
 			;(function (window) {
 				var ctx,
