--- a/xia.html
+++ b/xia.html
@@ -2,6 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="shortcut icon" href="USM.ico" />
+		<link rel="icon" href="USM.ico" />
 		<title>文件碎片</title>
 		<link href="xia.css" type="text/css" rel="stylesheet" />
 	</head>
